--- a/src/_RhythmRevit/RhythmRevit/RhythmRevit.csproj
+++ b/src/_RhythmRevit/RhythmRevit/RhythmRevit.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-        <TargetFramework>net48</TargetFramework>
+        <TargetFrameworks>net48;net7.0-windows</TargetFrameworks>
         <OutputType>Library</OutputType>
         <RootNamespace>Rhythm</RootNamespace>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -9,8 +9,8 @@
         <UseWPF>true</UseWPF>
         <PlatformTarget>x64</PlatformTarget>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-        <Configurations>Debug R24;;Debug R20;Debug R21;Debug R22;Debug R23;</Configurations>
-        <Configurations>$(Configurations);Release R24;Release R20;Release R21;Release R22;Release R23;</Configurations>
+        <Configurations>Debug R24;Debug R20;Debug R21;Debug R22;Debug R23;Debug R25;</Configurations>
+        <Configurations>$(Configurations)Release R24;Release R20;Release R21;Release R22;Release R23;Release R25;</Configurations>
         <NoWarn>MSB3277;CS1591</NoWarn>
     </PropertyGroup>
  <PropertyGroup Condition="$(Configuration.Contains('Debug R20'))">
@@ -69,7 +69,7 @@
         <RevitVersion>2023</RevitVersion>
         <DefineConstants>$(DefineConstants);R23</DefineConstants>
     </PropertyGroup>
-	  <PropertyGroup Condition="$(Configuration.Contains('Debug R24'))">
+	<PropertyGroup Condition="$(Configuration.Contains('Debug R24'))">
         <DynamoVersion>2.18</DynamoVersion>
         <DynamoOutput>2.18</DynamoOutput>
         <RevitVersion>2024</RevitVersion>
@@ -80,6 +80,20 @@
         <DynamoOutput>2.17</DynamoOutput>
         <RevitVersion>2024</RevitVersion>
         <DefineConstants>$(DefineConstants);R24</DefineConstants>
+    </PropertyGroup>
+	<PropertyGroup Condition="$(Configuration.Contains('Debug R25'))">
+        <DynamoVersion>3.0</DynamoVersion>
+        <DynamoOutput>3.0</DynamoOutput>
+        <RevitVersion>2025</RevitVersion>
+        <DefineConstants>$(DefineConstants);R25</DefineConstants>
+		 <TargetFrameworkVersion>net7.0-windows</TargetFrameworkVersion>
+    </PropertyGroup>
+    <PropertyGroup Condition="$(Configuration.Contains('Release R25'))">
+        <DynamoVersion>3.0</DynamoVersion>
+        <DynamoOutput>3.0</DynamoOutput>
+        <RevitVersion>2025</RevitVersion>
+        <DefineConstants>$(DefineConstants);R25</DefineConstants>
+		 <TargetFrameworkVersion>net7.0-windows</TargetFrameworkVersion>
     </PropertyGroup>
 	 <PropertyGroup>
         <DynVersion>$(DynamoVersion)</DynVersion>
@@ -106,6 +120,9 @@
 	 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug R23|AnyCPU'">
 	   <Optimize>True</Optimize>
 	 </PropertyGroup>
+	 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug R25|AnyCPU'">
+	   <Optimize>True</Optimize>
+	 </PropertyGroup>
 	 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release R24|AnyCPU'">
 	   <Optimize>True</Optimize>
 	 </PropertyGroup>
@@ -121,18 +138,48 @@
 	 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release R23|AnyCPU'">
 	   <Optimize>True</Optimize>
 	 </PropertyGroup>
+	 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release R25|AnyCPU'">
+	   <Optimize>True</Optimize>
+	 </PropertyGroup>
 	  <ItemGroup>
+        <Reference Include="AdWindows">
+          <HintPath>C:\Program Files\Autodesk\Revit 2025\AdWindows.dll</HintPath>
+        </Reference>
+        <Reference Include="RevitAddInUtility">
+          <HintPath>C:\Program Files\Autodesk\Revit 2025\RevitAddInUtility.dll</HintPath>
+        </Reference>
+        <Reference Include="RevitAPI">
+          <HintPath>C:\Program Files\Autodesk\Revit 2025\RevitAPI.dll</HintPath>
+        </Reference>
+        <Reference Include="RevitAPIUI">
+          <HintPath>C:\Program Files\Autodesk\Revit 2025\RevitAPIUI.dll</HintPath>
+        </Reference>
         <Reference Include="System.Windows" />
+        <Reference Include="UIFramework">
+          <HintPath>C:\Program Files\Autodesk\Revit 2025\UIFramework.dll</HintPath>
+        </Reference>
     </ItemGroup>
-	  <ItemGroup>
-        <PackageReference Include="Chuongmep.Revit.Api.RevitAPI" Version="$(RevitVersion).*" />
-        <PackageReference Include="Chuongmep.Revit.Api.RevitAPIUI" Version="$(RevitVersion).*" />
-        <PackageReference Include="Chuongmep.Revit.Api.AdWindows" Version="$(RevitVersion).*" />
+	  <ItemGroup Condition="'$(Configuration)|$(Platform)'!='Release R25|AnyCPU'">
         <PackageReference Include="DynamoVisualProgramming.Revit" Version="$(DynVersion).*" />
         <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="$(DynVersion).*" />
         <PackageReference Include="CommonServiceLocator" Version="1.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="NUnit" Version="2.6.3" />
+        <PackageReference Include="Prism" Version="4.1.0.0" />
+        <PackageReference Include="System.Buffers" Version="4.5.1" />
+        <PackageReference Include="System.Collections.Immutable" Version="1.7.1" />
+        <PackageReference Include="System.Memory" Version="4.5.4" />
+        <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
+        <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.3" />
+        <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+        <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    </ItemGroup>
+	  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release R25|AnyCPU' Or '$(Configuration)|$(Platform)'=='Release R25|AnyCPU'">
+        <PackageReference Include="DynamoVisualProgramming.Revit" Version="$(DynVersion).*" />
+        <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="3.0.0-beta6885" />
+        <PackageReference Include="CommonServiceLocator" Version="2.0.7" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="NUnit" Version="3.14.0" />
         <PackageReference Include="Prism" Version="4.1.0.0" />
         <PackageReference Include="System.Buffers" Version="4.5.1" />
         <PackageReference Include="System.Collections.Immutable" Version="1.7.1" />
