--- a/src/_RhythmRevit/RhythmRevit/RhythmRevit.csproj
+++ b/src/_RhythmRevit/RhythmRevit/RhythmRevit.csproj
@@ -202,4 +202,7 @@
         <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
         <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     </ItemGroup>
+	  <ItemGroup>
+	    <Folder Include="Revit\Views\" />
+	  </ItemGroup>
 </Project>
