--- a/src/_RhythmRevit/RhythmRevit/RhythmRevit.csproj
+++ b/src/_RhythmRevit/RhythmRevit/RhythmRevit.csproj
@@ -152,23 +152,23 @@
 	   <Optimize>True</Optimize>
 	 </PropertyGroup>
 	  <ItemGroup>
-        <Reference Include="AdWindows">
-          <HintPath>C:\Program Files\Autodesk\Revit 2025\AdWindows.dll</HintPath>
-        </Reference>
-        <Reference Include="RevitAddInUtility">
-          <HintPath>C:\Program Files\Autodesk\Revit 2025\RevitAddInUtility.dll</HintPath>
-        </Reference>
-        <Reference Include="RevitAPI">
-          <HintPath>C:\Program Files\Autodesk\Revit 2025\RevitAPI.dll</HintPath>
-        </Reference>
-        <Reference Include="RevitAPIUI">
-          <HintPath>C:\Program Files\Autodesk\Revit 2025\RevitAPIUI.dll</HintPath>
-        </Reference>
         <Reference Include="System.Windows" />
-        <Reference Include="UIFramework">
-          <HintPath>C:\Program Files\Autodesk\Revit 2025\UIFramework.dll</HintPath>
-        </Reference>
     </ItemGroup>
+	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release R25|AnyCPU' Or '$(Configuration)|$(Platform)'=='Release R25|AnyCPU'"> 
+		
+		<Reference Include="UIFramework">
+	      <HintPath>C:\Program Files\Autodesk\Revit 2025\UIFramework.dll</HintPath>
+        </Reference>
+		<Reference Include="AdWindows">
+	      <HintPath>C:\Program Files\Autodesk\Revit 2025\AdWindows.dll</HintPath>
+        </Reference>
+		<Reference Include="RevitAPI">
+	      <HintPath>C:\Program Files\Autodesk\Revit 2025\RevitAPI.dll</HintPath>
+        </Reference>
+		<Reference Include="RevitAPIUI">
+	     <HintPath>C:\Program Files\Autodesk\Revit 2025\RevitAPIUI.dll</HintPath>
+        </Reference>
+	</ItemGroup>
 	  <ItemGroup Condition="'$(Configuration)|$(Platform)'!='Release R25|AnyCPU'">
         <PackageReference Include="DynamoVisualProgramming.Revit" Version="$(DynVersion).*" />
         <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="$(DynVersion).*" />
@@ -185,6 +185,7 @@
         <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
 		<PackageReference Include="Chuongmep.Revit.Api.RevitAPI" Version="$(RevitVersion).*" />
         <PackageReference Include="Chuongmep.Revit.Api.RevitAPIUI" Version="$(RevitVersion).*" />
+		<PackageReference Include="Chuongmep.Revit.Api.AdWindows" Version="$(RevitVersion).*" />
         <PackageReference Include="DynamoVisualProgramming.Core" Version="$(DynVersion).*" />
     </ItemGroup>
 	  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release R25|AnyCPU' Or '$(Configuration)|$(Platform)'=='Release R25|AnyCPU'">
