--- a/src/RhythmCore/RhythmCore.csproj
+++ b/src/RhythmCore/RhythmCore.csproj
@@ -191,5 +191,18 @@
         <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.3" />
         <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
         <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+		 <PackageReference Include="Humanizer" Version="2.14.1" />
+   <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+   <PackageReference Include="Markov" Version="2.0.0" />
     </ItemGroup>
+	<Target Name="CopyFiles" AfterTargets="CoreBuild">
+        <Message Text="Build Revit Version $(RevitVersion)" Importance="high" />
+        <ItemGroup>
+            <AssemblyFiles Include="$(TargetDir)RhythmCore.dll" />
+            <AssemblyFiles Include="$(TargetDir)*.xml" />
+        </ItemGroup>
+        <Message Text="Copying From $(TargetDir) To $(FolderPackages)" Importance="high" />
+        <Copy SourceFiles="@(AssemblyFiles)" DestinationFolder="$(ProjectDir)..\..\deploy\$(RevitVersion)" />
+        <Message Text="Copied Completed" Importance="high" />
+    </Target>
 </Project>
