--- a/src/RhythmUI/RhythmUI.csproj
+++ b/src/RhythmUI/RhythmUI.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
    <PropertyGroup>
-     <TargetFrameworks>net48;net7.0-windows</TargetFrameworks>
+       <TargetFramework>net48</TargetFramework>
+		<!--<TargetFramework>net7.0-windows</TargetFramework>-->
         <OutputType>Library</OutputType>
         <RootNamespace>Rhythm</RootNamespace>
         <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
